k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-drive-app
  namespace: apps-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: s3-drive
  template:
    metadata:
      labels:
        app: s3-drive
    spec:
      containers:
      - name: s3-drive
        image: ghcr.io/joshi-labs/s3-drive:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
