k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-drive
  namespace: apps-prod
spec:
  selector:
    app: s3-drive
  ports:
    - port: 80
      targetPort: 80
