k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: s3-drive
  namespace: apps-prod
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`s3-drive.vpjoshi.in`)
      kind: Rule
      services:
        - name: s3-drive
          port: 80
